vlib/v/checker/tests/nested_struct_with_required_attr_err.vv
struct Foo {
	bar Bar
}

struct Bar {
	egg Egg
}

struct Egg {
	name string @[required]
}

fn main() {
	f := Foo{}
	println(f)
}
